ontol/ontol-compiler/test-cases/error/repr/circular_subtyping.on
def foo ()
def bar ()
def baz ()
rel foo is: bar // ERROR Circular subtyping relation
rel bar is: baz // ERROR Circular subtyping relation
rel baz is: foo // ERROR Circular subtyping relation
